# preferences

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  STYLE.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/node-caddy/: docker-compose.yml
.devcontainer/ubuntu/: Dockerfile  docker-compose.yml
.devcontainer/ubuntu-python-uv/: devcontainer.json
cloudflared/: .gitignore  config.yml
mcp_server/: __init__.py  prompts.py  resources.py  server.py  tools.py  utils.py
templates/devcontainers/node-caddy/: Caddyfile  Dockerfile  devcontainer.json
templates/devcontainers/ubuntu-node/: Dockerfile  devcontainer.json
templates/devcontainers/ubuntu-python-uv/: Dockerfile  docker-compose.yml
