[project]
name = "preferences-mcp-server"
version = "0.1.0"
description = "MCP server for serving development preferences and examples to AI assistants"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[dependency-groups]
dev = []
